# atomic-habits-deploy

./: .coverage  .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  habits.json  nginx.conf  pyproject.toml  requirements.txt  users.json
.github/workflows/: deploy.yml
config/: celery.py  settings.py  urls.py
habits/: admin.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
